--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="https://apliiqsc.blob.core.windows.net/sitestorage/_release/Overrides/ProductImage/4392109_5453-2023-12-08-15-34-49-627.jpg?v=2" style="width:100%">
+        <img src="https://images2.imgbox.com/62/59/PdSw0gFN_o.gif" style="width:100%">
         <p>Back Out There<br><b>$49.99</b></p>
       </div>
     </div>
