add one line to test

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <div class="w3-col l4 m6 s6 w3-margin-bottom">
           <img src="qrcode.png" alt="Jane" style="width:100%">
           <a href="https://www.paypal.com/paypalme/evanmann92" target="_blank"><p><button class="w3-button w3-light-grey w3-block">Buy Now</button></p></a>
+          <p>Shopify coming soon</p>
         </div>
         <div class="w3-display-container w3-hide">
             <div class="w3-col l4 m3 s3 w3-margin-bottom">
