adding shopify buttons and pages

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="https://images2.imgbox.com/62/59/PdSw0gFN_o.gif" style="width:100%">
+        <a href="back-out-there.html"><img src="https://images2.imgbox.com/62/59/PdSw0gFN_o.gif" style="width:100%"></a>
         <p>Back Out There<br><b>$49.99</b></p>
       </div>
     </div>
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="https://apliiqsc.blob.core.windows.net/sitestorage/_release/Overrides/ProductImage/4220574_4381-2023-08-12-04-18-01-879.png" style="width:100%">
+        <a href="back-home.html"><img src="https://apliiqsc.blob.core.windows.net/sitestorage/_release/Overrides/ProductImage/4220574_4381-2023-08-12-04-18-01-879.png" style="width:100%"></a>
         <p>Back Home<br><b>$29.99</b></p>
       </div>
     </div>
