--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <div class="w3-right w3-hide-small">
       <a href="#projects" class="w3-bar-item w3-button">Products</a>
       <a href="#about" class="w3-bar-item w3-button">Philosophy</a>
-      <a href="#contact" class="w3-bar-item w3-button">Buy</a>
     </div>
   </div>
 </div>
@@ -108,8 +107,8 @@
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Buy</h3>
-    <p>#getbackoutthere</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 w3-hide">Buy</h3>
+    <p class="w3-hide">#getbackoutthere</p>
     <form action="/action_page.php" target="_blank" class="w3-hide">
       <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
       <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
@@ -129,7 +128,7 @@
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
         </div>
-        <div class="w3-col l4 m6 s6 w3-margin-bottom">
+        <div class="w3-col l4 m6 s6 w3-margin-bottom w3-hide">
           <img src="qrcode.png" alt="Jane" style="width:100%">
           <a href="https://www.paypal.com/paypalme/evanmann92" target="_blank"><p><button class="w3-button w3-light-grey w3-block">Buy Now</button></p></a>
           <p>Shopify coming soon</p>
@@ -157,7 +156,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16 ">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Copyright Back Shirt 2024<br> Website powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
 </body>
