added back out there new photo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <a href="back-out-there.html"><img src="https://images2.imgbox.com/62/59/PdSw0gFN_o.gif" style="width:100%"></a>
+        <a href="back-out-there.html"><img src="https://images2.imgbox.com/34/48/eCbtgbPm_o.png" style="width:100%"></a>
         <p>Back Out There<br><b>$49.99</b></p>
       </div>
     </div>
