--- a/back-out-there.html
+++ b/back-out-there.html
@@ -26,7 +26,7 @@
 
       <div class="w3-container w3-center"><hr><hr>
 
-        <img src="https://images2.imgbox.com/62/59/PdSw0gFN_o.gif" width="200px">
+        <img src="https://images2.imgbox.com/34/48/eCbtgbPm_o.png" width="200px">
         <p>Introducing the Back Out There high-performance athletic t-shirt, crafted from 100% recycled polyester. Designed for those who aim to conquer any challenge, this t-shirt combines sustainability with superior functionality. Its sweat-wicking, breathable, and lightweight fabric ensures you stay cool and comfortable during even the most intense activities. Whether you're hitting the gym, going for a run, or tackling an outdoor adventure, the Back Out There t-shirt is your perfect companion. With unisex sizing that runs slightly large, it offers a versatile fit for everyone. Elevate your athletic wear with a shirt that's as resilient and driven as you are.</p>
 
         <div id='product-component-1716426280018'></div>
