--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
     </p>
   </div>
 
+
+   <!-- people images with text below - staff section -->
   <div class="w3-row-padding w3-grayscale w3-hide">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/team2.jpg" alt="John" style="width:100%">
@@ -107,7 +109,7 @@
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 w3-hide">Buy</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16 ">Subscribe</h3>
     <p class="w3-hide">#getbackoutthere</p>
     <form action="/action_page.php" target="_blank" class="w3-hide">
       <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
@@ -118,6 +120,41 @@
         <i class="fa fa-paper-plane"></i> SEND MESSAGE
       </button>
     </form>
+
+    <!-- mailchimp form -->
+    <div id="mc_embed_shell">
+      <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+              #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
+              /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
+      <div id="mc_embed_signup">
+          <form action="https://wearbackshirt.us14.list-manage.com/subscribe/post?u=0e2bd9ff2acf5833bb8f8cb66&amp;id=243e9c1fc0&amp;f_id=0066ece0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+            <div id="mc_embed_signup_scroll"><h2 class="w3-hide">Subscribe</h2>
+              <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+              <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""></div><div class="mc-field-group"><label for="mce-LNAME">Last Name </label><input type="text" name="LNAME" class=" text" id="mce-LNAME" value=""></div><div class="mc-field-group size1of2"><label for="mce-BIRTHDAY-month">Birthday </label><div class="datefield"><span class="subfield monthfield"><input class="birthday REQ_CSS" type="text" pattern="[0-9]*" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month" value=""></span> /<span class="subfield dayfield"><input class="birthday REQ_CSS" type="text" pattern="[0-9]*" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day" value=""></span><span class="small-meta nowrap">( mm / dd )</span></div></div>
+              <div id="mce-responses" class="clear foot">
+                  <div class="response" id="mce-error-response" style="display: none;"></div>
+                  <div class="response" id="mce-success-response" style="display: none;"></div>
+              </div>
+              <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                  /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                  <input type="text" name="b_0e2bd9ff2acf5833bb8f8cb66_243e9c1fc0" tabindex="-1" value="">
+              </div>
+              <div class="optionalParent">
+                  <div class="clear foot">
+                      <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                      <p style="margin: 0px auto;"><a href="http://eepurl.com/iXCcRE" title="Mailchimp - email marketing made easy and fun"><span style="display: inline-block; background-color: transparent; border-radius: 4px;"><img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a></p>
+                  </div>
+              </div>
+            </div>
+          </form>
+      </div>
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+  </div>
+
+
     <div class="w3-row-padding w3-grayscale">
         <div class="w3-col l4 m3 s3 w3-margin-bottom">
             <div class="w3-display-container w3-hide">
