--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div class="w3-right w3-hide-small">
       <a href="#projects" class="w3-bar-item w3-button">Products</a>
       <a href="#about" class="w3-bar-item w3-button">Philosophy</a>
+      <a href="backonthemap/" class="w3-bar-item w3-button w3-hide">#backonthemap</a>
+
     </div>
   </div>
 </div>
