--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         <p>Back Home<br><b>$29.99</b></p>
       </div>
     </div>
+    <div class="w3-col l3 s6">
+      <div class="w3-container">
+        <a href="back-home-shorts.html"><img src="IMG_4626_backhomeshorts_website.PNG" style="width:100%"></a>
+        <p>Back Home Shorts<br><b>$44.99</b></p>
+      </div>
+    </div>
   </div>
 
   <div class="w3-container w3-padding-32">
